# FA_2021_Software_Engineering

./: .gitignore  README.md
docs/: index.html  jquestions.json  question.html  scoreboard.html  showdifferentscreens.html  styles.css  wheel.html
docs/images/: wheelSetup.js
wheel-of-jeopardy/: pyproject.toml  scripts.py
wheel-of-jeopardy/tests/: test_wheel_of_jeopardy.py
wheel-of-jeopardy/wheel_of_jeopardy/: manage.py
wheel-of-jeopardy/wheel_of_jeopardy/api/: models.py  urls.py  views.py
wheel-of-jeopardy/wheel_of_jeopardy/api/db_json/: Animal.json  Book.json  Celebrity.json  Computer.json  Film.json  Geography.json  History.json  Math.json
wheel-of-jeopardy/wheel_of_jeopardy/api/management/commands/: import_db.py
wheel-of-jeopardy/wheel_of_jeopardy/api/migrations/: 0001_initial.py
wheel-of-jeopardy/wheel_of_jeopardy/websockets/: consumers.py  forms.py  routing.py  tracking.py  urls.py  views.py
wheel-of-jeopardy/wheel_of_jeopardy/websockets/static/websockets/js/: frontend.js  generate_table.js  helper.js  sockets.js  wheel.js
wheel-of-jeopardy/wheel_of_jeopardy/websockets/templates/websockets/: create_game.html  game.html  index.html  join_game.html  temp.html
wheel-of-jeopardy/wheel_of_jeopardy/wheel_of_jeopardy/: asgi.py  settings.py  urls.py  wsgi.py
wheel-of-jeopardy/wheel_of_jeopardy_app/: manage.py
wheel-of-jeopardy/wheel_of_jeopardy_app/wheel_of_jeopardy_app/: asgi.py  settings.py  urls.py  wsgi.py
