[tool.poetry]
name = "wheel-of-jeopardy"
version = "0.1.0"
description = "A project created for the Johns Hopkins Foundations of Software Engineering course, Fall 2021"
authors = ["Clayton Franklin <cfrank31@jh.edu>", 
            "Laurie Ferger <lferger2@jhu.edu>", 
            "Jordan Fish <jfish8@jhu.edu>", 
            "Kristianna Gaw <kgaw1@jhu.edu>",
            "Justin Lam <jlam27@jhu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
channels = "^3.0.4"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = 'scripts:formatProject'

[tool.yapf]
based_on_style = "pep8"
